# uvstudio

./: .gitignore  CONTRIBUTING.md  DESKTOP.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.claude/: launch.json
.github/workflows/: ci.yml  desktop.yml  web.yml
blender-plugin/: README.md  uvstudio_bridge.py
c4d-plugin/: IDS.md  README.md  UVStudioBridge.pyp
docs/: GUIDE.md  SIGNING.md
public/: demo-screens.psd
scripts/: capture-docs.mjs  make-icon.mjs
src/: index.css  vite-env.d.ts
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: main.rs
src/app/: App.tsx  updater.ts
src/bridge/: link.ts  roundtrip.test.ts  roundtrip.ts
src/map/: classify.ts  contentRect.ts  demo.ts  fit.test.ts  fit.ts  ocr.ts  regions.ts  types.ts
src/mesh/: halfedge.test.ts  halfedge.ts  loadFile.ts  loadPsd.ts  samples.ts  shells.ts  types.ts
src/state/: live.ts  store.ts
src/three/: ActiveFrameloop.tsx  checker.ts  colors.ts
src/ui/: FloatingWindow.tsx  HelpOverlay.tsx  ImportDialog.tsx  Landing.tsx  LinkWizard.tsx  MapPanel.tsx  Preferences.tsx  StatusBar.tsx  Toasts.tsx  TopBar.tsx  UpdateBanner.tsx  env.ts  icons.tsx  importMap.ts  useFileDrop.ts
src/unwrap/: distortion.ts  pack.test.ts  pack.ts  param.test.ts  param.ts  solve.ts
src/viewport2d/: FreeTransform.tsx  MapView2D.tsx  UVEditLayer.tsx  Viewport2D.tsx
src/viewport3d/: ContextSurfaces.tsx  MapSurfaces.tsx  Viewport3D.tsx  (+1 more)
(+2 files in other folders)
