[package]
name = "uvstudio"
version = "0.3.22"
description = "UV Studio — screen mapping (desktop)"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
ureq = "2"  # tiny HTTP client to download the update installer (repo is public)
